Bug 73348 - GPU crash (GM45) with kernel 3.13-rc5
Summary: GPU crash (GM45) with kernel 3.13-rc5
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 73316 74060 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-01-07 08:53 UTC by Michi
Modified: 2017-07-24 22:56 UTC (History)
6 users (show)

See Also:
i915 platform:
i915 features:


Attachments
crash dump from /sys/class/drm/card0/error (2.66 MB, text/plain)
2014-01-07 08:53 UTC, Michi
no flags Details

Description Michi 2014-01-07 08:53:19 UTC
Created attachment 91589 [details]
crash dump from /sys/class/drm/card0/error

see the crash dump

dmesg output:

[  765.704065] [drm] stuck on render ring
[  765.704079] [drm] GPU crash dump saved to /sys/class/drm/card0/error
[  765.704083] [drm] GPU hangs can indicate a bug anywhere in the entire gfx stack, including userspace.
[  765.704086] [drm] Please file a _new_ bug report on bugs.freedesktop.org against DRI -> DRM/Intel
[  765.704090] [drm] drm/i915 developers can then reassign to the right component if it's not a kernel issue.
[  765.704094] [drm] The gpu crash dump is required to analyze gpu hangs, so please always attach it.
[  765.707605] [drm:i915_set_reset_status] *ERROR* render ring hung inside bo (0x12e56000 ctx 0) at 0x12e79680
[  772.704056] [drm] stuck on render ring
[  772.704177] [drm:i915_set_reset_status] *ERROR* render ring hung inside bo (0xf91f000 ctx 0) at 0xf91f56c
[  772.704185] [drm:i915_context_is_banned] *ERROR* context hanging too fast, declaring banned!
Comment 1 Paulo Zanoni 2014-01-07 11:29:24 UTC
Hi

Can you please describe what were you doing when this error happened?

Do you know any way to reliably reproduce the bug?

Thanks,
Paulo
Comment 2 Michi 2014-01-07 12:14:56 UTC
(In reply to comment #1)
> Hi
> 
> Can you please describe what were you doing when this error happened?
unfortunately not. But it might be that it always happens when I do something in firefox - but I could be totally wrong.
> Do you know any way to reliably reproduce the bug?
nope, it really happens unpredictably
> 
> Thanks,
> Paulo
thx
Comment 3 Michi 2014-01-07 12:20:22 UTC
I also use the latest xf86-video-intel driver and I think an older version of the driver is not crashing. Again, I might be totally wrong, but I think problems started with this driver revision: http://cgit.freedesktop.org/xorg/driver/xf86-video-intel/commit/?id=9289e2c56b7f0cc78c5123691ad96611f0e04bed
Comment 4 Chris Wilson 2014-01-07 15:01:06 UTC
*** Bug 73316 has been marked as a duplicate of this bug. ***
Comment 5 Chris Wilson 2014-01-07 15:01:36 UTC
commit 9d8473c5d9489db439aca73f470bda29a22ebab6
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Tue Jan 7 13:43:35 2014 +0000

    sna/gen4: Check for available batch space before restoring state after CA pass
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=73348
    References: https://bugs.freedesktop.org/show_bug.cgi?id=55500
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 6 ntzrmtthihu777 2014-01-07 18:46:34 UTC
That duplicate bug report is mine; I found a solution in switching to UXA from SNA, but that's only a temporary solution for the moment.
Comment 7 Chris Wilson 2014-01-26 09:43:38 UTC
*** Bug 74060 has been marked as a duplicate of this bug. ***
Comment 8 Chris Wilson 2014-01-26 20:25:33 UTC
*** Bug 74094 has been marked as a duplicate of this bug. ***


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.